# decaf-emu

src/common/: platform.h
src/libdecaf/src/cafe/libraries/gx2/: gx2_enum.h
src/libdecaf/src/ios/: ios_network_thread.h
src/libgpu/src/spirv/: spirv_shaderspvbuilder.h  spirv_spvbuilder.h  spirv_vtx.cpp
tools/: CMakeLists.txt
tools/gx2shader-decompiler/: CMakeLists.txt  gx2_fetchshader.cpp  gx2_shaders.h  gx2r_buffer.h  main.cpp  types.h
